Actualización de las entidades siguiendo las buenas prácticas.